# django-auth-template

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
code/: Dockerfile  Makefile  docker-compose.yml  manage.py  pyproject.toml
code/.docker/: entrypoint.sh
code/core/application/use_cases/permission/: __init__.py  create_permission.py  delete_permission.py  list_all_permissions.py  list_permissions.py  update_permission.py
code/core/application/use_cases/permission_group/: __init__.py  create_permission_group.py  delete_permission_group.py  list_all_permissions_group.py  list_permissions_group.py  update_permission_group.py
code/core/application/use_cases/user/: __init__.py  create_user.py  delete_user.py  list_users.py
code/core/core/: settings.py
code/core/domain/: content_type.py  entity.py  exceptions.py  permission.py  permission_group.py  user.py  value_objects.py
code/core/domain/entities/: base.py  content_type.py  permission.py  permission_group.py  user.py
code/core/domain/entity/: __init__.py  content_type.py  permission.py  permission_group.py  user.py
code/core/domain/exceptions/: __init__.py
code/core/domain/repositories/: __init__.py  content_type_repository.py  permission_group_repository.py  permission_repository.py  user_repository.py
code/core/domain/value_objects/: __init__.py  base.py  unique_entity_id.py
code/core/infrastructure/repositories/in_memory/: __init__.py  base_repository.py  permission_group_repository.py  permission_repository.py
code/core/tests/domain/: test_content_type.py  test_entity.py  test_permission.py  test_permission_groups.py  test_user.py  test_value_objects.py
code/setup/: settings.py
(+18 files in other folders)
