[project]
name = "Django Auth Template"
version = "0.0.1"
description = ""
authors = [
    {name = "Pedro Farias", email = ""},
]
dependencies = [
    "django>=4.0.4",
    "django-rest-framework>=0.1.0"
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=1.6.0",
    "pylint>=2.13.0",
    "pytest-cov>=3.0.0",
    "pytest>=7.1.2",
]

[tool.pdm.scripts]
makemigrations = "code/manage.py makemigrations"
mergemigrations = "code/manage.py makemigrations --merge"
migrate = "code/manage.py migrate"
loaddata = "code/manage.py loaddata code/fixtures/setup-dump.json"
dumpdata = "code/manage.py dumpdata --natural-foreign --natural-primary -e sessions -e admin.logentry -e core.logactionmodel --indent 4 > core/fixtures/setup-dump.json"
collectstatic = "code/manage.py collectstatic"
djangoshell = "code/manage.py shell"

pep8 = "autopep8 --in-place --recursive ."
pylint = "pylint ."

test = "pytest --ignore __pypackages__"
test_cov = "pdm run test --cov . --cov-fail-under 80"
test_cov_html = "pdm run test_cov --cov-report html:./__coverage"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
